# cpp-ray-tracer

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  run.sh
include/: camera.h  capp.h  gtfm.h  lightbase.h  objectbase.h  objsphere.h  pointlight.h  qbimage.h  ray.h  scene.h
src/: camera.cpp  capp.cpp  gtfm.cpp  lightbase.cpp  main.cpp  objectbase.cpp  objsphere.cpp  pointlight.cpp  qbimage.cpp  ray.cpp  scene.cpp
